# RenderDemo

./: .gitignore  CMakeLists.txt  README.md
shader/: shader_hair.frag  shader_hair.vs  shader_mesh.frag  shader_mesh.vs
src/: Shader.cc  Shader.h  main.cpp  render_hair.cpp  render_hair.h  render_mesh.cpp  render_mesh.h  tool.cc  tool.h  xy_calc.h  xy_glfw.cc  xy_glfw.h  xy_opengl.cc  xy_opengl.h  xy_rt.h
